t1.txt

tests\test_error_type_mismatch.kix:
error: Type mismatch: int vs str
  --> tests\test_error_type_mismatch.kix:5
   |
 5 | let c = a + b; // ERROR: Type mismatch int vs str
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  1 error(s) in Type Checker

error[E0000]: aborting due to previous error(s)
  Kinetix v0.0.7 (Dev)
  For more information, open an issue: https://github.com/MisterY3515/Kinetix/issues

